build: :rotating_light: fix compilation issues

--- a/package.json
+++ b/package.json
@@ -95,5 +95,13 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bigint-buffer",
+      "keccak",
+      "secp256k1",
+      "sqlite3"
+    ]
   }
 }
